src/components/AccordionItem/styles.module.scss
@import '~carbon-components/scss/globals/scss/_vars.scss';
@import '~carbon-components/scss/globals/scss/_typography.scss';
@import '@/styles/mixins';

.AccordionItem {
  margin-bottom: $spacing-03;
  cursor: pointer;
}

.AccordionHeader {
  @include carbon--type-style('expressive-heading-03', true);

  display: flex;
  flex: 1 1 100%;
  justify-content: space-between;
  align-items: center;

  @include bp('lg') {
    @include carbon--type-style('expressive-heading-04', true);

    align-items: center;
  }
}

.AccordionContent {
  padding: $spacing-05;
  overflow: hidden;
  background: $white-0;

  @include bp('md') {
    padding: $spacing-07 $spacing-05;
  }
}

.Icon {
  width: 3rem;
  height: 3rem;
  margin-bottom: $spacing-05;
  color: $blue-60;

  @include bp('lg') {
    width: 5rem;
    height: 5rem;
    margin-bottom: 0;
  }
}

.OpenCloseIcon {
  margin-left: auto;

  @include bp('lg', true) {
    position: absolute;
    top: 0;
    right: 0;
  }

  @include bp('md', true) {
    right: 1rem;
  }
}

.RichText {
  padding: $spacing-06 0;

  @include bp('lg') {
    padding-right: 20%;
  }
}

.RichTextHeading {
  margin-right: auto;
  margin-left: 0;
  padding-right: $spacing-05;

  @include bp('lg') {
    padding-right: $spacing-10;
  }
}

.Visual {
  display: none;

  @include bp('lg') {
    position: absolute;
    right: -3.875rem;
    bottom: -2rem;
    display: block;
    opacity: 0;
    transition: opacity 0.5s;

    :global(.rah-animating--down) &,
    :global(.rah-static--height-auto) & {
      opacity: 1;
    }

    :global(.rah-animating--up) &,
    :global(.rah-static--height-zero) & {
      opacity: 0;
      transition: opacity 0.3s;
    }
  }

  > span {
    display: block !important;
  }
}

